--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
@@ -9,24 +7,37 @@
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: #375b33;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 .container {
   margin: 30px auto;
-  width: 350px;
+  width: 25rem;
+  border: 10px solid #4d7948;
+  padding: .5rem 2rem;
+  background: url('extras/images/Coins.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: var(--box-shadow);
 }
 
 h1 {
   letter-spacing: 1px;
   margin: 0;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2rem;
+  text-shadow: 2px 2px 2px#fff;
 }
 
 h3 {
@@ -85,11 +96,12 @@ input[type='number'] {
   font-size: 16px;
   padding: 10px;
   width: 100%;
+  font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
+  background-color: #375b33;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
